log
Sat, May 17, 2025  1:51:44 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  1:53:28 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
d4c0c53
Sat, May 17, 2025  1:54:46 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|4
total_score: 15/70
565082a
Sat, May 17, 2025  2:08:06 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:13: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   for (i = 0, i < 9; i++){
             ^
sudoku.c:49:25: error: expected ';' before ')' token
   for (i = 0, i < 9; i++){
                         ^
cc1.exe: all warnings being treated as errors
c1fa4be
Sat, May 17, 2025  2:08:49 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:13: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   for (i = 0, i < 9; i++){
             ^
sudoku.c:49:25: error: expected ';' before ')' token
   for (i = 0, i < 9; i++){
                         ^
cc1.exe: all warnings being treated as errors
c35df5d
Sat, May 17, 2025  2:08:57 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e7118bf
Sat, May 17, 2025  2:12:59 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 35/70
6cc398e
Sat, May 17, 2025  2:14:07 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|3
total_score: 35/70
133fc2a
Sat, May 17, 2025  2:17:03 PM: 
 sudoku.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:77:9: error: variable 'vistos' set but not used [-Werror=unused-but-set-variable]
     int vistos[10] = {0};
         ^~~~~~
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
7afa381
Sat, May 17, 2025  2:17:16 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:77:9: error: variable 'vistos' set but not used [-Werror=unused-but-set-variable]
     int vistos[10] = {0};
         ^~~~~~
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
ee2e4ec
